# idtpy

./: pyproject.toml
idtpy/: __init__.py  designer.py  dxfutils.py
