[project]
name = "idtpy"
version = "0.1.1"
description = "Simple Python package for the design and modelling of Interdigital Transducers (IDTs)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ezdxf>=1.3.5",
    "gdspy>=1.6.13",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "scipy>=1.14.1",
]
