[project]
name = "idtpy"
version = "0.1.1"
description = "Simple Python package for the design and modelling of Interdigital Transducers (IDTs)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ezdxf>=1.3.5",
    "gdspy>=1.6.13",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pydantic>=2.10.4",
    "scipy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["idtpy"]

[tool.hatch.build.targets.wheel]
packages = ["idtpy"]
